infrastructure/terraform/alb.tf
# ============= Load Balancer ================
module "alb" {
  source  = "terraform-aws-modules/alb/aws"
  version = "~> 5.0"
  
  name = "searchneu"

  load_balancer_type = "application"

  vpc_id             = aws_vpc.main.id
  subnets            = aws_subnet.public.*.id
  security_groups    = [aws_security_group.lb.id]

  http_tcp_listeners = [
    {
      port        = 80
      protocol    = "HTTP"
      action_type = "redirect"
      redirect = {
        port        = "443"
        protocol    = "HTTPS"
        status_code = "HTTP_301"
      }
    }
  ]

  # Set default action to 404
  https_listeners = [
    {
      port               = 443
      protocol           = "HTTPS"
      certificate_arn    = aws_acm_certificate.cert.arn
      action_type        = "fixed-response"
      fixed_response = {
        content_type = "text/html"
        status_code  = "404"
      }
    }
  ]

  tags = {
    Description = "Load balance traffic to all envs"
  }
}

# ALB Security Group: Edit to restrict access to the application
resource "aws_security_group" "lb" {
  name        = "load-balancer-security-group"
  description = "controls access to the ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
